# epoch

./: CMakeLists.txt
code/: buffer.cc  buffer.hh  draw_gl.cc  draw_gl.hh  editor.cc  editor.hh  font.cc  font.hh  main.cc  util.cc  util.hh  window.cc  window.hh
shaders/: fs_main_text.glsl  vs_main_text.glsl
